# CppSharp

./: CMakeLists.txt  Directory.Build.props
src/: CMakeLists.txt
src/AST/: ASTVisitor.cs  Type.cs
src/CppParser/: CMakeLists.txt  Parser.cpp
src/CppParser/Bindings/CLI/: CppParser.cpp
src/CppParser/Bootstrap/: Bootstrap.cs
src/CppParser/ParserGen/: ParserGen.cs
src/Generator/: CMakeLists.txt  Driver.cs  Library.cs  Options.cs
src/Generator/Generators/CLI/: CLIGenerator.cs  CLIHeaders.cs  CLIMarshal.cs  CLISources.cs
src/Generator/Generators/CSharp/: CSharpSources.cs
src/Generator/Passes/: CheckIgnoredDecls.cs  ResolveIncompleteDeclsPass.cs
src/Generator/Types/: TypeMapDatabase.cs
src/Generator/Utils/: Utils.cs
tests/CSharp/: CSharpTemplates.h
